# worldcup-predictions

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  LICENSE  README.md  compose.prod.yaml  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
docs/: advanced-commands.md  architecture.md  automation.md  data-sources.md  diagnostics-and-improvement.md  plugins.md
reports/: bonus-tracker.md  extraction-diagnostics.md  prediction-audit.md  prediction-debug.md  provider-knockout-audit.md  provider-points.md
scripts/: run-live-scheduled-update.sh  run-prod-compose.sh  run-with-timing.sh  sync-live-data.sh
src/worldcup_predictions/: __init__.py  (+4 more)
tests/: test_architecture_contracts.py  test_backtest.py  test_baseline_model.py  test_country_registry.py  test_dynamic_public_sources.py  test_elo_ratings.py  test_env.py  test_experts_debug.py  test_exports_baselines.py  test_fixturedownload_source.py  test_google_news_rss.py  test_legacy_feature_migrations.py  test_market_odds.py  test_openligadb_source.py  test_phase1_calibration_backtest.py  test_phase2_stats_correctness.py  test_phase3_market.py  test_phase4_signals.py  test_phase5_6.py  test_phase_context.py  test_plugin_manager.py  test_polymarket.py  test_postmatch_calibration.py  test_provider_optimizers.py  test_public_score_sources.py  test_public_sources.py  test_result_update_monitoring.py  test_signal_skill.py  test_simulations.py  test_srf_experts.py  test_storage.py  test_thesportsdb_source.py  test_tournament_state.py  test_weather_plugin.py  test_wikipedia_results.py
(+256 files in other folders)
